--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/ico" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SnapSnack</title>
-    <script async src="https://js.braintreegateway.com/web/dropin/1.42.0/js/dropin.js"></script>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link
+			rel="icon"
+			type="image/ico"
+			href="/favicon.ico" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0" />
+		<title>SnapSnack</title>
+		<script
+			async
+			src="https://js.braintreegateway.com/web/dropin/1.42.0/js/dropin.js"></script>
+	</head>
+	<body>
+		<div
+			id="app"
+			class="overflow-x-hidden"></div>
+		<script
+			type="module"
+			src="/src/main.js"></script>
+	</body>
 </html>
